--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -84,7 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:fontFamily="@font/soraMedium"
+            android:fontFamily="@font/sorasemibold"
             android:lineHeight="18sp"
             android:text="408 Ton Dan, Cam Le, Da Nang"
             android:textColor="#808080"
@@ -103,7 +103,7 @@
                 android:background="@drawable/background_white_boder"
                 android:drawableLeft="@drawable/iconedit"
                 android:drawablePadding="7dp"
-                android:fontFamily="@font/soraLight"
+                android:fontFamily="@font/sorasemibold"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="Edit address"
@@ -118,7 +118,7 @@
                 android:background="@drawable/background_white_boder"
                 android:drawableLeft="@drawable/noteicon"
                 android:drawablePadding="5dp"
-                android:fontFamily="@font/soraLight"
+                android:fontFamily="@font/sorasemibold"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:text="Note"
@@ -186,7 +186,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="4dp"
-                    android:fontFamily="@font/soraMedium"
+                    android:fontFamily="@font/sorasemibold"
                     android:lineHeight="18dp"
                     android:text="with Chocolate"
                     android:textColor="#9B9B9B"
@@ -212,7 +212,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="2dp"
-                    android:fontFamily="@font/soraExtrabold"
+                    android:fontFamily="@font/sorabold"
                     android:text="1"
                     android:textColor="#2F2D2C"
                     android:textSize="24sp" />
@@ -271,7 +271,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="4dp"
-                    android:fontFamily="@font/soraMedium"
+                    android:fontFamily="@font/sorasemibold"
                     android:lineHeight="18dp"
                     android:text="with Chocolate"
                     android:textColor="#9B9B9B"
@@ -297,7 +297,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="15dp"
                     android:layout_marginTop="2dp"
-                    android:fontFamily="@font/soraExtrabold"
+                    android:fontFamily="@font/sorabold"
                     android:text="1"
                     android:textColor="#2F2D2C"
                     android:textSize="24sp" />
@@ -332,7 +332,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#2F2D2C"
         android:text="Payment Summary"
-        android:fontFamily="@font/soraExtrabold"
+        android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
         android:layout_marginStart="30dp"
@@ -346,7 +346,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#2F2D2C"
         android:text="Price"
-        android:fontFamily="@font/soraMedium"
+        android:fontFamily="@font/sorasemibold"
         android:textSize="16sp"
         android:lineHeight="20dp"
         android:layout_marginStart="30dp"
@@ -359,7 +359,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
         android:text="$ 4.53"
-        android:fontFamily="@font/soraExtrabold"
+        android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
         android:layout_marginEnd="30dp"
@@ -373,7 +373,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#2F2D2C"
         android:text="Delivery Fee"
-        android:fontFamily="@font/soraMedium"
+        android:fontFamily="@font/sorasemibold"
         android:textSize="16sp"
         android:lineHeight="20dp"
         android:layout_marginStart="30dp"
@@ -386,7 +386,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
         android:text="$ 1.00"
-        android:fontFamily="@font/soraExtrabold"
+        android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
         android:layout_marginEnd="30dp"
@@ -409,7 +409,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#2F2D2C"
         android:text="Total Payment"
-        android:fontFamily="@font/soraMedium"
+        android:fontFamily="@font/sorasemibold"
         android:textSize="16sp"
         android:lineHeight="20dp"
         android:layout_marginStart="30dp"
@@ -422,7 +422,7 @@
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
         android:text="$ 5.53"
-        android:fontFamily="@font/soraExtrabold"
+        android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
         android:layout_marginEnd="30dp"
@@ -439,7 +439,7 @@
         android:text="Order"
         android:textSize="20sp"
         android:textColor="@color/white"
-        android:fontFamily="@font/soraExtrabold"
+        android:fontFamily="@font/sorabold"
         android:gravity="center"
         android:paddingVertical="20dp"
         />
