--- a/app/src/main/res/layout/fragment_status_order.xml
+++ b/app/src/main/res/layout/fragment_status_order.xml
@@ -46,7 +46,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/background_green"
-                android:fontFamily="@font/soraMedium"
+                android:fontFamily="@font/sorasemibold"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="8dp"
                 android:text="ORDER"
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="4dp"
-                    android:fontFamily="@font/soraMedium"
+                    android:fontFamily="@font/sorasemibold"
                     android:lineHeight="18dp"
                     android:text="with Chocolate"
                     android:textColor="#9B9B9B"
@@ -167,7 +167,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="4dp"
-                    android:fontFamily="@font/soraMedium"
+                    android:fontFamily="@font/sorasemibold"
                     android:lineHeight="18dp"
                     android:text="with Chocolate"
                     android:textColor="#9B9B9B"
@@ -211,7 +211,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:fontFamily="@font/soraMedium"
+                android:fontFamily="@font/sorasemibold"
                 android:lineHeight="20dp"
                 android:text="Total Payment"
                 android:textColor="#2F2D2C"
@@ -237,7 +237,7 @@
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/background_button_selected_list_custommer"
-            android:fontFamily="@font/soraMedium"
+            android:fontFamily="@font/sorasemibold"
             android:gravity="center"
             android:paddingHorizontal="20dp"
             android:paddingVertical="15dp"
