--- a/app/src/main/res/layout/category_adapter.xml
+++ b/app/src/main/res/layout/category_adapter.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/linear_list_cate1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
@@ -17,8 +16,8 @@
                 android:textColor="@color/black"
                 android:gravity="center"
                 android:background="@drawable/background_button_list_custommer"
-                android:textSize="16sp"
-                android:fontFamily="@font/sorasemibold"
+                android:textSize="18sp"
+                android:fontFamily="@font/sorabold"
                 android:lineHeight="18sp"
                 android:layout_marginEnd="10dp"
                 />
