--- a/app/src/main/res/layout/food_adapter.xml
+++ b/app/src/main/res/layout/food_adapter.xml
@@ -68,6 +68,7 @@
                     android:lineHeight="22dp"
                     />
                 <TextView
+                    android:id="@+id/btn_addFood_home"
                     android:layout_marginTop="8dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
