--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -80,7 +80,8 @@
             android:textColor="#2F2D2C"
             android:textSize="18sp" />
 
-        <androidx.appcompat.widget.AppCompatEditText
+        <TextView
+            android:id="@+id/address_orderr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -88,7 +89,8 @@
             android:lineHeight="18sp"
             android:text="408 Ton Dan, Cam Le, Da Nang"
             android:textColor="#808080"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -96,6 +98,7 @@
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_editAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -112,6 +115,7 @@
                 android:textSize="12sp" />
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_note_order"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -133,194 +137,27 @@
             android:layout_marginTop="20dp"
             android:background="#EAEAEA" />
     </LinearLayout>
-
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/linear3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="vertical"
+        android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/linear2">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/background_gray"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/capucino1" />
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:fontFamily="@font/sorasemibold"
-                    android:lineHeight="22dp"
-                    android:text="Cappucino"
-                    android:textColor="#2F2D2C"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/sorasemibold"
-                    android:lineHeight="18dp"
-                    android:text="with Chocolate"
-                    android:textColor="#9B9B9B"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="45dp"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/circle_boder"
-                    android:drawableStart="@drawable/minus"
-                    android:paddingHorizontal="10dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="2dp"
-                    android:fontFamily="@font/sorabold"
-                    android:text="1"
-                    android:textColor="#2F2D2C"
-                    android:textSize="24sp" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginBottom="7dp"
-                    android:background="@drawable/circle_boder"
-                    android:drawableStart="@drawable/plus"
-                    android:gravity="center"
-                    android:paddingHorizontal="10dp" />
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:background="@drawable/background_gray"
-            android:orientation="horizontal"
-            android:padding="5dp">
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                app:cardCornerRadius="15dp">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/capucino1" />
-            </androidx.cardview.widget.CardView>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingTop="15dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:fontFamily="@font/sorasemibold"
-                    android:lineHeight="22dp"
-                    android:text="Cappucino"
-                    android:textColor="#2F2D2C"
-                    android:textSize="16sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="4dp"
-                    android:fontFamily="@font/sorasemibold"
-                    android:lineHeight="18dp"
-                    android:text="with Chocolate"
-                    android:textColor="#9B9B9B"
-                    android:textSize="13sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="45dp"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:background="@drawable/circle_boder"
-                    android:drawableStart="@drawable/minus"
-                    android:paddingHorizontal="10dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginHorizontal="15dp"
-                    android:layout_marginTop="2dp"
-                    android:fontFamily="@font/sorabold"
-                    android:text="1"
-                    android:textColor="#2F2D2C"
-                    android:textSize="24sp" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="35dp"
-                    android:layout_height="35dp"
-                    android:layout_marginBottom="7dp"
-                    android:background="@drawable/circle_boder"
-                    android:drawableStart="@drawable/plus"
-                    android:gravity="center"
-                    android:paddingHorizontal="10dp" />
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@id/linear2"
+        app:layout_constraintBottom_toTopOf="@id/layout_order"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="30dp"
+        />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
     <ImageView
         android:id="@+id/imageview1"
         android:layout_width="match_parent"
         android:layout_height="4dp"
-        app:layout_constraintTop_toBottomOf="@id/linear3"
+        app:layout_constraintBottom_toTopOf="@id/tv3"
         app:layout_constraintLeft_toLeftOf="parent"
         android:background="#F4F4F4"
         />
@@ -328,21 +165,23 @@
         android:id="@+id/tv3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/imageview1"
+        app:layout_constraintBottom_toTopOf="@id/tv_order_food_number"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="15dp"
         android:textColor="#2F2D2C"
         android:text="Payment Summary"
         android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         />
     <TextView
-        android:id="@+id/tv4"
+        android:id="@+id/price_food"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv3"
+        app:layout_constraintBottom_toTopOf="@id/price_delivery_order"
+        android:layout_marginBottom="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#2F2D2C"
         android:text="Price"
@@ -353,9 +192,11 @@
         android:layout_marginTop="15dp"
         />
     <TextView
+        android:id="@+id/tv_order_food_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv3"
+        app:layout_constraintBottom_toTopOf="@id/price_delivery_order"
+        android:layout_marginBottom="20dp"
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
         android:text="$ 4.53"
@@ -366,11 +207,12 @@
         android:layout_marginTop="15dp"
         />
     <TextView
-        android:id="@+id/tv5"
+        android:id="@+id/price_delivery_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv4"
+        app:layout_constraintBottom_toTopOf="@id/imageview2"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="20dp"
         android:textColor="#2F2D2C"
         android:text="Delivery Fee"
         android:fontFamily="@font/sorasemibold"
@@ -380,9 +222,11 @@
         android:layout_marginTop="15dp"
         />
     <TextView
+        android:id="@+id/price_delivery_order_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv4"
+        app:layout_constraintBottom_toTopOf="@id/imageview2"
+        android:layout_marginBottom="20dp"
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
         android:text="$ 1.00"
@@ -396,16 +240,16 @@
         android:id="@+id/imageview2"
         android:layout_width="match_parent"
         android:layout_height="1.0dp"
-        app:layout_constraintTop_toBottomOf="@id/tv5"
+        app:layout_constraintBottom_toTopOf="@id/tv6"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginHorizontal="30dp"
         android:background="#EAEAEA"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginBottom="15dp"/>
     <TextView
         android:id="@+id/tv6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/imageview2"
+        app:layout_constraintBottom_toTopOf="@id/btnOrder"
         app:layout_constraintLeft_toLeftOf="parent"
         android:textColor="#2F2D2C"
         android:text="Total Payment"
@@ -413,12 +257,14 @@
         android:textSize="16sp"
         android:lineHeight="20dp"
         android:layout_marginStart="30dp"
+        android:layout_marginBottom="50dp"
         android:layout_marginTop="15dp"
         />
     <TextView
+        android:id="@+id/tv_total_number_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/imageview2"
+        app:layout_constraintBottom_toTopOf="@id/btnOrder"
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
         android:text="$ 5.53"
@@ -426,15 +272,16 @@
         android:textSize="20sp"
         android:lineHeight="20dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginBottom="40dp"
         />
     <TextView
+        android:id="@+id/btnOrder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginHorizontal="30dp"
-        android:layout_marginBottom="45dp"
+        android:layout_marginBottom="35dp"
         android:background="@drawable/background_button_selected_list_custommer"
         android:text="Order"
         android:textSize="20sp"
@@ -443,5 +290,6 @@
         android:gravity="center"
         android:paddingVertical="20dp"
         />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
