--- a/app/src/main/res/layout/status_adapter.xml
+++ b/app/src/main/res/layout/status_adapter.xml
@@ -1,6 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/linear3"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginStart="30dp"
+    android:layout_marginTop="30dp"
+    android:layout_marginEnd="20dp"
+    android:background="@drawable/background_gray2"
+    android:orientation="vertical"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/tv1">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_marginBottom="10dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/background_green"
+        android:fontFamily="@font/sorasemibold"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="8dp"
+        android:text="ORDER"
+        android:textColor="#00AB56"
+        android:textSize="16sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="145dp"
+        android:text="19/04/2020, 04:20"
+        android:textColor="#808089"
+        android:textSize="12dp" />
+
+</LinearLayout>
+
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/rcv_status_food"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    />
+
+
+
+<ImageView
+    android:id="@+id/imageview1"
+    android:layout_width="match_parent"
+    android:layout_height="2dp"
+    android:layout_marginHorizontal="10dp"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="15dp"
+    android:background="#EAEAEA"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/linear3" />
+
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="20dp"
+    android:orientation="horizontal">
+
+    <TextView
+        android:id="@+id/tv6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:fontFamily="@font/sorasemibold"
+        android:lineHeight="20dp"
+        android:text="Total Payment"
+        android:textColor="#2F2D2C"
+        android:textSize="16sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="170dp"
+        android:fontFamily="@font/sorasemibold"
+        android:lineHeight="20dp"
+        android:text="$ 5.53"
+        android:textColor="#2F2D2C"
+        android:textSize="18sp" />
+</LinearLayout>
+
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginTop="20dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="20dp"
+    android:background="@drawable/background_button_selected_list_custommer"
+    android:fontFamily="@font/sorasemibold"
+    android:gravity="center"
+    android:paddingHorizontal="20dp"
+    android:paddingVertical="15dp"
+    android:text="Waiting confirm"
+    android:textColor="@color/white"
+    android:textSize="15sp" />
+
+
+</LinearLayout>
