--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -145,7 +145,7 @@
         app:layout_constraintTop_toBottomOf="@id/linear2"
         app:layout_constraintBottom_toTopOf="@id/layout_order"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="30dp"
+        android:padding="10dp"
         />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_order"
