--- a/app/src/main/res/layout/status_adapter.xml
+++ b/app/src/main/res/layout/status_adapter.xml
@@ -4,11 +4,11 @@
     android:id="@+id/linear3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="30dp"
     android:layout_marginTop="30dp"
-    android:layout_marginEnd="20dp"
+    android:layout_marginHorizontal="20dp"
     android:background="@drawable/background_gray2"
     android:orientation="vertical"
+    android:padding="10dp"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintTop_toBottomOf="@id/tv1">
 
@@ -33,6 +33,7 @@
         android:textSize="16sp" />
 
     <TextView
+        android:id="@+id/time_order"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -63,7 +64,7 @@
     app:layout_constraintTop_toBottomOf="@id/linear3" />
 
 <LinearLayout
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="20dp"
     android:orientation="horizontal">
@@ -80,10 +81,12 @@
         android:textSize="16sp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/total_payment_status"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginStart="170dp"
+        android:gravity="end"
+        android:layout_marginEnd="10dp"
         android:fontFamily="@font/sorasemibold"
         android:lineHeight="20dp"
         android:text="$ 5.53"
