--- a/app/src/main/res/layout/status_adapter.xml
+++ b/app/src/main/res/layout/status_adapter.xml
@@ -99,7 +99,7 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_marginTop="20dp"
-    android:layout_marginEnd="10dp"
+    android:layout_marginHorizontal="80dp"
     android:layout_marginBottom="20dp"
     android:background="@drawable/background_button_selected_list_custommer"
     android:fontFamily="@font/sorasemibold"
