--- a/app/src/main/res/layout/status_adapter.xml
+++ b/app/src/main/res/layout/status_adapter.xml
@@ -34,10 +34,10 @@
 
     <TextView
         android:id="@+id/time_order"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginStart="145dp"
+        android:gravity="end"
         android:text="19/04/2020, 04:20"
         android:textColor="#808089"
         android:textSize="12dp" />
