--- a/app/src/main/res/layout/order_adapter.xml
+++ b/app/src/main/res/layout/order_adapter.xml
@@ -25,7 +25,8 @@
                         android:id="@+id/image_order"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/capucino1" />
+                        android:src="@drawable/capucino1"
+                        android:scaleType="fitXY"/>
                 </androidx.cardview.widget.CardView>
 
                 <LinearLayout
