--- a/app/src/main/res/drawable/background_buttom_menu.xml
+++ b/app/src/main/res/drawable/background_buttom_menu.xml
@@ -3,7 +3,8 @@
 
     <corners
         android:topLeftRadius="30dp"
-        android:topRightRadius="30dp" />
+        android:topRightRadius="30dp"
+        />
 
     <solid android:color="@color/white" />
 
