--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,6 +46,7 @@
         android:layout_alignParentLeft="true"
         />
     <EditText
+        android:id="@+id/tvUserNameLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
@@ -71,6 +72,8 @@
         android:layout_alignParentLeft="true"
         />
     <EditText
+        android:id="@+id/tvPassWordLogin"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
