--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,28 +29,47 @@
         android:layout_marginTop="40dp"
         android:layout_marginHorizontal="16dp"
         android:orientation="vertical">
-        <androidx.cardview.widget.CardView
-            android:layout_width="140dp"
-            android:layout_height="140dp"
-            app:cardCornerRadius="200dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="20dp"
-            android:padding="4dp"
-            android:background="@drawable/background_gray"
-            >
-        <ImageView
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardVIew_profile"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                app:cardCornerRadius="200dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:padding="4dp"
+                android:background="@drawable/background_gray"
+                >
+                <ImageView
+                    android:id="@+id/imageview_profile_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/baseline_person_24"
+                    />
+            </androidx.cardview.widget.CardView>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/FAB_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@id/cardVIew_profile"
+                app:layout_constraintRight_toRightOf="parent"
+                app:srcCompat = "@drawable/baseline_camera_alt_24"
+                android:backgroundTint="@color/white"   />
 
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitXY"
-            android:src="@drawable/avt3"
-            />
-        </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
         <TextView
+            android:id="@+id/tv_name_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Huynh Ngoc Huy"
+            android:text="User"
             android:textColor="#181D27"
             android:textSize="22sp"
             android:fontFamily="@font/sorabold"
@@ -64,18 +83,6 @@
             android:layout_marginBottom="20dp"
             android:hint="What’s your first name?"
             android:textColor="#555555"
-            android:textColorHint="#555555"
-            android:paddingHorizontal="20dp"
-            android:fontFamily="@font/sorasemibold"
-            android:background="@drawable/background_white_boder"
-            />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profile_ed2"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="20dp"
-            android:textColor="#555555"
-            android:hint="What’s your last name?"
             android:textColorHint="#555555"
             android:paddingHorizontal="20dp"
             android:fontFamily="@font/sorasemibold"
