--- a/app/src/main/res/layout/fragment_history_orderr.xml
+++ b/app/src/main/res/layout/fragment_history_orderr.xml
@@ -8,7 +8,7 @@
     tools:context=".view.customer.StatusOrderFragment"
     android:orientation="vertical">
     <ImageView
-        android:id="@+id/btn_back_order_status"
+        android:id="@+id/btn_back_order_status_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_arrow_back_ios_24"
@@ -22,6 +22,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/rcv_status"
+        android:id="@+id/rcv_status_history"
         />
 </LinearLayout>
