--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -54,8 +54,8 @@
 
         <ImageView
             android:id="@+id/image_info"
-            android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:scaleType="fitXY"
             android:src="@drawable/avt3" />
     </androidx.cardview.widget.CardView>
