--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -7,6 +7,16 @@
     android:background="@color/white"
     tools:context=".view.customer.OrderFragment">
 
+    <ImageView
+        android:id="@+id/btn_back_order"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_arrow_back_ios_24"
+        android:layout_marginTop="28dp"
+        android:layout_marginStart="28dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
     <TextView
         android:id="@+id/tv1"
         android:layout_width="match_parent"
@@ -87,7 +97,7 @@
             android:layout_marginTop="16dp"
             android:fontFamily="@font/sorasemibold"
             android:lineHeight="18sp"
-            android:text="408 Ton Dan, Cam Le, Da Nang"
+            android:text=""
             android:textColor="#808080"
             android:textSize="16sp"
             />
@@ -147,6 +157,21 @@
         android:layout_marginTop="20dp"
         android:padding="10dp"
         />
+    <TextView
+        android:id="@+id/textEmpty"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Cart is empty"
+        android:textColor="@color/black"
+        android:textStyle="italic"
+        android:textSize="40sp"
+        android:gravity="center"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="@id/linear3"
+        app:layout_constraintLeft_toLeftOf="@id/linear3"
+        app:layout_constraintRight_toRightOf="@id/linear3"
+        app:layout_constraintBottom_toBottomOf="@id/linear3"
+        />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_order"
         android:layout_width="match_parent"
@@ -199,7 +224,7 @@
         android:layout_marginBottom="20dp"
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
-        android:text="$ 4.53"
+        android:text="$ 0.00"
         android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
@@ -267,7 +292,7 @@
         app:layout_constraintBottom_toTopOf="@id/btnOrder"
         app:layout_constraintRight_toRightOf="parent"
         android:textColor="#2F2D2C"
-        android:text="$ 5.53"
+        android:text="$ 1.00"
         android:fontFamily="@font/sorabold"
         android:textSize="20sp"
         android:lineHeight="20dp"
