--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.customer.profileFragment"
     android:background="#F9F9F9">
-
+    <ImageView
+        android:id="@+id/btn_back_profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/baseline_arrow_back_ios_24"
+        android:layout_marginTop="48dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginStart="28dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        />
     <TextView
         android:id="@+id/tv1"
         android:layout_width="match_parent"
@@ -75,43 +85,105 @@
             android:fontFamily="@font/sorabold"
             android:layout_gravity="center"
             />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profile_ed1"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
-            android:layout_marginBottom="20dp"
-            android:hint="What’s your first name?"
-            android:textColor="#555555"
-            android:textColorHint="#555555"
-            android:paddingHorizontal="20dp"
-            android:fontFamily="@font/sorasemibold"
-            android:background="@drawable/background_white_boder"
-            />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profile_ed3"
+            android:layout_marginBottom="20dp">
+            <androidx.appcompat.widget.AppCompatEditText
+                android:layout_marginTop="22dp"
+                android:elevation="1dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:id="@+id/profile_ed1"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:hint="What’s your first name?"
+                android:textColor="#555555"
+                android:textColorHint="#555555"
+                android:paddingHorizontal="20dp"
+                android:fontFamily="@font/sorasemibold"
+                android:background="@drawable/background_white_boder"
+                />
+            <TextView
+                android:layout_marginStart="15dp"
+                android:elevation="2dp"
+                android:text="Full Name"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/black"
+                android:fontFamily="sorasemibold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="8dp"
+                />
+
+        </RelativeLayout>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="20dp"
-            android:hint="What’s your address?"
-            android:textColor="#555555"
-            android:textColorHint="#555555"
-            android:paddingHorizontal="20dp"
-            android:fontFamily="@font/sorasemibold"
-            android:background="@drawable/background_white_boder"
-            />
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/profile_ed4"
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.AppCompatEditText
+                android:layout_marginTop="22dp"
+                android:id="@+id/profile_ed3"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginBottom="20dp"
+                android:hint="What’s your address?"
+                android:textColor="#555555"
+                android:textColorHint="#555555"
+                android:paddingHorizontal="20dp"
+                android:fontFamily="@font/sorasemibold"
+                android:background="@drawable/background_white_boder"
+                />
+            <TextView
+                android:layout_marginStart="15dp"
+                android:elevation="2dp"
+                android:text="Address"
+                android:textColor="@color/black"
+                android:fontFamily="@font/sorasemibold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="8dp"
+                />
+
+        </RelativeLayout>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginBottom="20dp"
-            android:hint="Phone number?"
-            android:textColor="#555555"
-            android:textColorHint="#555555"
-            android:paddingHorizontal="20dp"
-            android:fontFamily="@font/sorasemibold"
-            android:background="@drawable/background_white_boder"
-            />
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp">
+            <androidx.appcompat.widget.AppCompatEditText
+                android:id="@+id/profile_ed4"
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginBottom="20dp"
+                android:hint="Phone number?"
+                android:textColor="#555555"
+                android:textColorHint="#555555"
+                android:layout_marginTop="22dp"
+
+                android:paddingHorizontal="20dp"
+                android:fontFamily="@font/sorasemibold"
+                android:background="@drawable/background_white_boder"
+                />
+            <TextView
+                android:layout_marginStart="15dp"
+                android:elevation="2dp"
+                android:text="Phone Number"
+                android:textColor="@color/black"
+                android:fontFamily="@font/sorasemibold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:padding="8dp"
+                />
+
+        </RelativeLayout>
+
+
+
+
+
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_updateInfo"
             android:layout_width="match_parent"
