--- a/app/src/main/res/layout/order_admin_adapter.xml
+++ b/app/src/main/res/layout/order_admin_adapter.xml
@@ -9,7 +9,6 @@
         android:background="@drawable/background_gray2"
         android:orientation="vertical"
         android:padding="10dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +40,51 @@
                 android:textSize="12dp" />
 
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginBottom="10dp">
 
+        <TextView
+            android:id="@+id/tv_info_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginBottom="26dp"
+            android:textStyle="bold"
+            android:paddingHorizontal="10dp"
+            android:textColor="@color/black"
+            android:text="User"
+            android:textSize="14sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="6dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tv_info_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="end"
+                android:text="19/04/2020, 04:20"
+                android:textColor="#808089"
+                android:textSize="12dp" />            <TextView
+            android:id="@+id/tv_info_phone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="end"
+            android:text="19/04/2020, 04:20"
+            android:textColor="#808089"
+            android:textSize="12dp" />
+
+        </LinearLayout>
+
+
+
+    </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_status_food"
             android:layout_width="match_parent"
