--- a/app/src/main/res/menu/profile.xml
+++ b/app/src/main/res/menu/profile.xml
@@ -7,20 +7,15 @@
             android:icon="@drawable/baseline_analytics_24"
             />
         <item
-            android:id="@+id/manageMenuNavi"
-            android:title="Manage Menu"
-            android:icon="@drawable/baseline_restaurant_menu_24"
-            />
-        <item
-            android:id="@+id/manageShopNavi2"
-            android:title="Manage Shop"
-            android:icon="@drawable/baseline_warehouse_24"
+            android:id="@+id/historyOrder"
+            android:title="History Order"
+            android:icon="@drawable/baseline_history_24"
             />
     </group>
     <item android:title="Account">
         <menu>
             <item
-                android:id="@+id/logoutAdmin"
+                android:id="@+id/logoutCustomer"
                 android:title="Log out"
                 android:icon="@drawable/baseline_logout_24"
                 />
